# photo-tagger

./: .cspell.json  .gitignore  .mcp.json  .mdformat.toml  .photo-tagger.example.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  renovate.json5  sonar-project.properties  zensical.toml
.claude/skills/ci/: SKILL.md
.cspell/: project-words.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  docs.yml  publish.yml  tests.yml
.sonarlint/: connectedMode.json
docs/: contributing.md  index.md  license.md
docs/architecture/: ai-providers.md  caching.md  index.md  metadata.md  pipeline.md
docs/development/: code-quality.md  dependencies.md  documentation.md  index.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md
docs/stylesheets/: extra.css
docs/usage/: cli-reference.md  gui.md  index.md  recipes.md
scripts/: check_version_sync.py  dev-setup.sh
src/photo_tagger/: __init__.py  ai.py  cache.py  cli_options.py  config.py  config_file.py  csv_report.py  diagnostics.py  discovery.py  errors.py  gui.py  gui_state.py  image_io.py  keywords.py  locking.py  logging_setup.py  main.py  metadata.py  models.py  pipeline.py  progress.py  providers.py
tests/: conftest.py  test_ai.py  test_analyze.py  test_analyze_litellm.py  test_cache.py  test_config.py  test_config_file.py  test_csv_report.py  test_diagnostics.py  test_discovery.py  test_gui.py  test_gui_state.py  test_image_io.py  test_keywords.py  test_lmstudio_validation.py  test_locking.py  test_logging_setup.py  test_main.py  test_metadata.py  test_metadata_exiftool.py  test_models.py  test_pipeline.py  test_progress.py  test_providers.py  test_version.py
