[project]
name = "photo-tagger"
version = "0.1.0"
description = "CLI tool to describe photos and add keywords using AI"
readme = "README.md"
requires-python = ">=3.14,<4"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = "MIT"
keywords = [
    "photo",
    "tagging",
    "cli",
    "ai",
    "exif",
    "metadata",
    "image recognition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "cyclopts>=4.5.2",
    "httpx>=0.28.1",
    "rawpy>=0.26.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.59.0",
    "loguru>=0.7.3",
    "pyexiftool>=0.5.6",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "litellm>=1.81.12",
    "ruff>=0.15.1",
    "zuban>=0.5.1",
]
test = [
    "inline-snapshot>=0.31.1",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.2.0",
    "pytest-xdist[psutil]>=3.8.0",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://juliobs.com/projects/photo-tagger/"
Documentation = "https://github.com/jbsilva/photo-tagger"
Repository = "https://github.com/jbsilva/photo-tagger"
Issues = "https://github.com/jbsilva/photo-tagger/issues"

[project.scripts]
photo-tagger = "photo_tagger.main:app"

[tool.ruff]
line-length = 100
indent-width = 4
extend-exclude = ["migrations"]
target-version = "py314"
fix = true
unsafe-fixes = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "ANN401", # Allow Any type annotations in certain cases
]

[tool.ruff.lint.per-file-ignores]
"**/tests/{test_*.py,conftest.py}" = [
    "S101",   # Allow assert in tests
    "S106",   # Allow hardcoded password in tests
    "ARG001", # Allow unused arguments in tests (for pytest fixtures)
]
"**/__init__.py" = [
    "D104", # Allow empty __init__.py files
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2
