[project]
name = "photo-tagger"
version = "0.2.2"
description = "CLI tool to describe photos and add keywords using AI"
readme = "README.md"
requires-python = ">=3.14,<4"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "photo",
    "tagging",
    "cli",
    "ai",
    "exif",
    "metadata",
    "image recognition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "cyclopts>=4.18.0",
    "filelock>=3.29.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic-ai>=1.107.0",
    "pydantic>=2.13.4",
    "pyexiftool>=0.5.6",
    "rawpy>=0.27.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pycroscope>=0.4.0",
    "ruff>=0.15.18",
    "zuban>=0.8.2",
]
test = [
    "inline-snapshot>=0.34.2",
    "pytest-cov>=7.1.0",
    "pytest-random-order>=1.2.0",
    "pytest-xdist[psutil]>=3.8.0",
    "pytest>=9.1.1",
]

[project.urls]
Homepage = "https://juliobs.com/projects/photo-tagger/"
Documentation = "https://github.com/jbsilva/photo-tagger"
Repository = "https://github.com/jbsilva/photo-tagger"
Issues = "https://github.com/jbsilva/photo-tagger/issues"

[project.scripts]
photo-tagger = "photo_tagger.main:app"

[tool.uv]
exclude-newer = "1 day"

[build-system]
requires = ["uv_build>=0.11.16,<1.0.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D413", # blank-line-after-last-section
]

[tool.ruff.lint.per-file-ignores]
"**/tests/{test_*.py,conftest.py}" = [
    "S101",   # Allow assert in tests
    "S105",   # Allow hardcoded password in strings in tests
    "S106",   # Allow hardcoded password in function calls in tests
    "ARG001", # Allow unused arguments in tests (for pytest fixtures)
    "INP001", # No __init__.py needed — pytest uses --import-mode=importlib
]
"**/__init__.py" = [
    "D104", # Allow empty __init__.py files
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.docformatter]
# Reflow docstrings to the project's 100-column width. `pre-summary-newline` keeps the summary on the
# second line to match the active D213 (the D212 alternative is ignored above). The pre-commit hook
# passes `--in-place`; a bare `docformatter src` only prints a diff. A couple of files are excluded
# from the hook (see .pre-commit-config.yaml for which and why).
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
pre-summary-newline = true

[tool.zuban]
strict = true
disallow_untyped_defs = true
warn_unreachable = true
python_executable = ".venv/bin/python"

[tool.pycroscope]
# Directory to analyze (relative to pyproject.toml) and the import root for the src layout
paths = ["src/photo_tagger"]
import_paths = ["src"]

# Output one issue per line, easier to scan and grep.
output_format = "concise"

# Checks
possibly_undefined_name = true
unused_variable = true
value_always_true = true
use_fstrings = true
missing_return_annotation = true
missing_parameter_annotation = true
suggested_parameter_type = true
suggested_return_type = true
incompatible_override = true
missing_generic_parameters = true

# See https://github.com/JelleZijlstra/pycroscope/issues/499
internal_error = false

# Tests intentionally use loose typing and assert helpers that pycroscope would flag as suggestions
[[tool.pycroscope.overrides]]
module = "tests"
missing_return_annotation = false
missing_parameter_annotation = false
suggested_parameter_type = false
suggested_return_type = false

[tool.bandit]
exclude_dirs = [".git", ".venv", "__pycache__", "tests"]

[tool.bandit.assert_used]
skips = ['tests/test_*.py']

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--durations=10",
    "--import-mode=importlib",
    "--random-order",
    "--numprocesses=logical",
    "--dist=load",
    "--tb=short",
    "--verbose",
    "--cov=src/photo_tagger",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:reports/coverage.xml",
    "-m",
    "not integration",
]
markers = [
    "integration: marks tests as integration testsdeselect with '-m \"not integration\"'",
]
